--- a/CSS/index.css
+++ b/CSS/index.css
@@ -67,6 +67,20 @@ body {
 	text-align: center;
 }
 
+
+.text
+{
+	margin-top: 30px;
+	width: 400px;
+	font-size: 16px;
+}
+
+.text span
+{
+	font-size: 19px;
+	color:#0c6ebe;
+}
+
 #volverArribaText
 {
 	font-size: 25px;
@@ -82,13 +96,6 @@ body {
 {
 	margin-left: 15px;
 }
-
-#info p
-{
-	margin-top: 30px;
-	width: 400px;
-}
-
 
 /*		formularios		*/
 .logSig
